--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<p>LONDA</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>The Young Family Takes Disney</title>
+    <head>
+
+    <body>
+    <main>
+       <center> <h1>The Young Family Takes Dinsey</h1> </center>
+       <img src="Londa&QueenElsa.jpeg" alt="Mickey and friends">
+
+
+
+
+
+
+
+
+
+
+
+
+    <main>
+       <article class="day-forecast">
+            <h2>Weather Report</h2>
+            <p>October 5, 2019: Cloudy with a chance of rain.</p>
+            <p>October 6, 2019: Windy with some afternoon showers.</p>
+            <p>October 7, 2019: Cloudy with a chance of rain.</p>
+        </article>
+
+    </body>
+    <footer>
+            <p>Posted By: Londa Young. &copy;</p>
+            <p>Contact information: londacyoung@gmail.com</p>
+    <footer>
+<html>
