added more pics

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>The Young Family Takes Disney</title>
-    <head>
 
-    <body>
+<head>
+    <title>The Young Family Takes Disney</title>
+</head>
+
+<body>
     <main>
-       <center> <h1>The Young Family Takes Dinsey</h1> </center>
-       <img src="Londa&QueenElsa.jpeg" alt="Mickey and friends">
+        <center>
+            <h1>The Young Family Takes Disney</h1>
+        </center>
+
+        <center><img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Mickey and friends.jpg"
+                alt="Micky and Friends" height="300" width="800"> </center>
+        <p>On July 4th of 2019, twenty-two memebers of my family embarked on our very first family vacation. In the
+            begenning, I was hesitant. With only 6 adults and 16 children, I thought it would be a disaster. However,
+            our 2019 family vacation turned out to be one of my favorite trips. </p>
+
+        <h3> Traveling day:</h3>
+        <p> Our first day was spent traveling. After getting the children packed and ready, we headed to the airport in
+            5 seperate cars. Most of my family had never been on an air plane, so the ride to thhe airport was full of
+            excitment and nervousness.
+            We flew via Southwest Airlines </p>
+            <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/kids packed.jpg"
+                alt="Kids packed" height="400" width="400>
 
 
 
@@ -17,20 +33,18 @@
 
 
 
+    </main>
+    <article class="day-forecast">
+        <h2>Weather Report</h2>
+        <p>October 5, 2019: Cloudy with a chance of rain.</p>
+        <p>October 6, 2019: Windy with some afternoon showers.</p>
+        <p>October 7, 2019: Cloudy with a chance of rain.</p>
+    </article>
+</body>
 
+<footer>
+    <p>Posted By: Londa Young. &copy;</p>
+    <p>Contact information: londacyoung@gmail.com</p>
+</footer>
 
-
-    <main>
-       <article class="day-forecast">
-            <h2>Weather Report</h2>
-            <p>October 5, 2019: Cloudy with a chance of rain.</p>
-            <p>October 6, 2019: Windy with some afternoon showers.</p>
-            <p>October 7, 2019: Cloudy with a chance of rain.</p>
-        </article>
-
-    </body>
-    <footer>
-            <p>Posted By: Londa Young. &copy;</p>
-            <p>Contact information: londacyoung@gmail.com</p>
-    <footer>
-<html>
+</html>
