--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             5 seperate cars. Most of my family had never been on an air plane, so the ride to thhe airport was full of
             excitment and nervousness.
             We flew via Southwest Airlines </p>
+         
+          <div class ="airport-pics">
             <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/kids packed.jpg"
-                alt="Kids packed" height="400" width="400>
-
-
-
+                alt="Kids packed" height="400" width="333">
+            <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Airport_ride.jpg"
+                alt="Airport train ride" height="400" width="333">
+            <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Dominic and airplane.jpeg"
+                alt="Best Baby with airplane" height="400" width="333">
+            </class> 
 
 
 
