--- a/index.html
+++ b/index.html
@@ -7,37 +7,102 @@
 
 <body>
     <main>
-        <center>
-            <h1>The Young Family Takes Disney</h1>
-        </center>
+        <h1>The Young Family Takes Disney</h1>
 
-        <center><img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Mickey and friends.jpg"
-                alt="Micky and Friends" height="300" width="800"> </center>
+
+        <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/mickeymouse.jpg"
+            alt="Micky and Friends" height="300" width="800">
         <p>On July 4th of 2019, twenty-two memebers of my family embarked on our very first family vacation. In the
             begenning, I was hesitant. With only 6 adults and 16 children, I thought it would be a disaster. However,
-            our 2019 family vacation turned out to be one of my favorite trips. </p>
+            our 2019 family vacation turned out to be my favorite trip thus far. </p>
 
-        <h3> Traveling day:</h3>
+        <h2> Traveling day:</h2>
         <p> Our first day was spent traveling. After getting the children packed and ready, we headed to the airport in
-            5 seperate cars. Most of my family had never been on an air plane, so the ride to thhe airport was full of
+            5 seperate cars. Most of my family had never been on an air plane, so the ride to the airport was full of
             excitment and nervousness.
-            We flew via Southwest Airlines </p>
-         
-          <div class ="airport-pics">
+        </p>
+
+        <div class="airport-pics">
             <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/kids packed.jpg"
                 alt="Kids packed" height="400" width="333">
             <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Airport_ride.jpg"
                 alt="Airport train ride" height="400" width="333">
             <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Dominic and airplane.jpeg"
                 alt="Best Baby with airplane" height="400" width="333">
-            </class> 
+            </class>
+
+            <h2> Destination: Disney</h2>
+            <p> Everyone was excited to board the Disney Magical Express with a set destination of Disney world!
+                Although we all stayed in a Disney resort, it was nearly impossible to find one resort that could
+                accomodate 22 people of the same party. This was not an issue since our resorts were within walking
+                distance of eachother. Half of my family stayed at Disney's Art of Animation and the other half of us
+                staryed at Disney's Pop Century Resort. </p>
+
+            <div class="arrival-pics">
+                <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Disney Magical Express.jpg"
+                    alt="magical express" height="300" width="600">
+                </class>
+
+                <h2>Dinsey Theme Parks</h2>
+                <p> After taking a family poll, we dicided on three Disney parks:
+                    <ul>
+                        <li>Disney's Magic Kingdom</li>
+                        <li>Disney's Epcot</li>
+                        <li>Disney's Animal Kingdom</li>
+                    </ul>
+                    We made a detailed agenda for our trip. We took into considering each child's favorite character and
+                    scheduled everything including fast passes for attractions, meals and even naps. Unfortunatly
+                    when preparing our agenda, we did not account for any weather changes, time restrictions or temper
+                    tanturms. A few hours in to our second day, we realized that the agenda was null and void. While
+                    this did complicate things, we were determind to have a great time.
+                </p>
+                <h3>Dinsey's Magic Kingdom</h3>
+                <p> Disney's Magic kingdon was fun for everyone. The weather was good and the lines were moving fast.
+                    The <strong>four</strong> double strollers we rented really came in handy as kids became tired from
+                    walking long distances in the heat.</p>
+
+                <div class="magic-kingdom">
+                    <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Camille with kids.jpg"
+                        alt="Camille with kids" height="400" width="333">
+                    <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/DearisSkylar.jpg"
+                        alt="kids" height="400" width="333">
+                    <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/LondaDOminic.jpeg"
+                        alt="Londa with best baby" height="400" width="333">
+                    </class>
+
+                    <h3>Dinsey's Epcot</h3>
+                    <p> There was a pretty bad rain storm on the morning of our visit to Disney's Epcot. At first we
+                        were sadden to cancel our plans. Then, we decided to not let the rain ruin our
+                        day. We stocked up on rain ponchos and covered all strollers. It's a good thing we did, because
+                        after a few hours the rain settled and the park became even more fun. We met tons of Disney
+                        characters. Epcot was by far the kids favorite park.</p>
+                    <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Family with Anna.jpeg"
+                        alt="family with princess anna" height="300" width="600">
+
+                    <h3>Dinsey's Animal Kingdon</h3>
+                    <p> Disney's Animal Kingdon was the top themepark for adults. We painted our faces using UV body
+                        paint and we lit up in the Advatar attraction. After the park, we took a trip to the beach. We
+                        had a blast and made the most of our last night in Disney World. </p>
+
+                        <div class="animal-kingdom">
+                        <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Mickey Pretzle.jpg"
+                            alt="mickey shapped pretzle" height="400" width="333">
+                        <img src="/Users/londayoung/Desktop/LC101_Homework/html-me-something/Images/Beach Day.jpg"
+                            alt="beach day" height="400" width="333">
+                        </class>
 
 
-
-
-
-
+                    <h2> Bye Bye, Disney!</h2>
+                    <p> By the end of the trip, everyone was exhaused and ready to get home. We had an amazing
+                        experience. I am very thankful that my family was able to experience things like flying on
+                        an airplane, going to the beach and visiting the most magical place on earth: Walt Disney
+                        World. We are all looking for the the 2020 family vacation!</p>
     </main>
+
+
+
+
+
     <article class="day-forecast">
         <h2>Weather Report</h2>
         <p>October 5, 2019: Cloudy with a chance of rain.</p>
