--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<header>
+    <a href="#travelingday"> Traveling Day</a> &nbsp
+    <a href="#Destinationdisney"> Destination: Disney </a> &nbsp
+    <a href="#themeparks"> Disney Theme Parks</a> &nbsp
+    <a href="#byedisney"> Bye Bye, Disney</a> &nbsp
+</header>
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -17,7 +23,11 @@
             begenning, I was hesitant. With only 6 adults and 16 children, I thought it would be a disaster. However,
             our 2019 family vacation turned out to be my favorite trip thus far. </p>
 
-        <h2> Traveling day:</h2>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+
+        <h2 id="travelingday"> Traveling day:</h2>
         <p> Our first day was spent traveling. After getting the children packed and ready, we headed to the airport in
             5 seperate cars. Most of my family had never been on an air plane, so the ride to the airport was full of
             excitment and nervousness.
@@ -37,8 +47,10 @@
                     alt="Best Baby with airplane" style="width:100%">
             </div>
         </div>
-
-        <h2> Destination: Disney</h2>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <h2 id="Destinationdisney"> Destination: Disney</h2>
         <p> Everyone was excited to board the Disney Magical Express with a set destination of Disney world!
             Although we all stayed in a Disney resort, it was nearly impossible to find one resort that could
             accomodate 22 people of the same party. This was not an issue since our resorts were within walking
@@ -49,7 +61,10 @@
             alt="magical-express" class="resize">
 
 
-        <h2>Dinsey Theme Parks</h2>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <h2 id="themeparks"> Dinsey Theme Parks</h2>
         <p> After taking a family poll, we dicided on three Disney parks:
             <ul>
                 <li>Disney's Magic Kingdom</li>
@@ -110,7 +125,7 @@
         </div>
 
 
-        <h2> Bye Bye, Disney!</h2>
+        <h2 id="byedisney"> Bye Bye, Disney!</h2>
         <p> By the end of the trip, everyone was exhaused and ready to get home. We had an amazing
             experience. I am very thankful that my family was able to experience things like flying on
             an airplane, going to the beach and visiting the most magical place on earth: Walt Disney
@@ -118,17 +133,25 @@
     </main>
 
 
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
 
-
-
-    <article class="day-forecast">
-        <h2>Weather Report</h2>
+    <article>
+        <h2>Orlando Florida Weather Report</h2>
         <p>October 5, 2019: Cloudy with a chance of rain.</p>
         <p>October 6, 2019: Windy with some afternoon showers.</p>
         <p>October 7, 2019: Cloudy with a chance of rain.</p>
     </article>
 
 </body>
+
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
 
 <footer>
     <p>Posted By: Londa Young. &copy;</p>
